--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   "dependencies": {
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
+    "vue-good-wizard": "^1.4.1",
     "vue-js-modal": "^1.3.26",
     "vue-router": "^3.0.1",
     "vuex-electron": "^1.0.0"
