--- a/package.json
+++ b/package.json
@@ -52,9 +52,8 @@
   },
   "dependencies": {
     "vue": "^2.5.16",
+    "vue-bulma-accordion": "^0.3.5",
     "vue-electron": "^1.0.6",
-    "vue-good-wizard": "^1.4.1",
-    "vue-js-modal": "^1.3.26",
     "vue-router": "^3.0.1",
     "vuex-electron": "^1.0.0"
   },
@@ -75,12 +74,12 @@
     "del": "^3.0.0",
     "devtron": "^1.4.0",
     "electron": "^2.0.4",
+    "electron-builder": "^20.19.2",
     "electron-debug": "^1.5.0",
     "electron-devtools-installer": "^2.2.4",
-    "electron-builder": "^20.19.2",
-    "mini-css-extract-plugin": "0.4.0",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "0.4.0",
     "multispinner": "^0.2.1",
     "node-loader": "^0.6.0",
     "style-loader": "^0.21.0",
@@ -89,8 +88,9 @@
     "vue-loader": "^15.2.4",
     "vue-style-loader": "^4.1.0",
     "vue-template-compiler": "^2.5.16",
-    "webpack-cli": "^3.0.8",
+    "vue2-collapse": "^1.0.15",
     "webpack": "^4.15.1",
+    "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.4",
     "webpack-hot-middleware": "^2.22.2",
     "webpack-merge": "^4.1.3"
