--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     }
   },
   "dependencies": {
+    "bootstrap-vue": "^2.0.0-rc.11",
     "vue": "^2.5.16",
     "vue-bulma-accordion": "^0.3.5",
     "vue-electron": "^1.0.6",
