--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
   },
   "dependencies": {
     "bootstrap-vue": "^2.0.0-rc.11",
+    "qr-image": "^3.2.0",
+    "qrcanvas-vue": "^1.2.1",
     "qrcode": "^1.3.2",
     "vue": "^2.5.16",
     "vue-bulma-accordion": "^0.3.5",
