--- a/package.json
+++ b/package.json
@@ -52,10 +52,14 @@
   },
   "dependencies": {
     "bootstrap-vue": "^2.0.0-rc.11",
+    "qr-image": "^3.2.0",
+    "qrcanvas-vue": "^1.2.1",
     "qrcode": "^1.3.2",
     "vue": "^2.5.16",
     "vue-bulma-accordion": "^0.3.5",
     "vue-electron": "^1.0.6",
+    "vue-integer-plusminus": "^1.1.0",
+    "vue-js-toggle-button": "^1.3.0",
     "vue-router": "^3.0.1",
     "vuex-electron": "^1.0.0"
   },
