--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "vue-bulma-accordion": "^0.3.5",
     "vue-electron": "^1.0.6",
     "vue-router": "^3.0.1",
+    "vue-shortkey": "^3.1.6",
     "vuex-electron": "^1.0.0"
   },
   "devDependencies": {
