--- a/package.json
+++ b/package.json
@@ -52,13 +52,17 @@
   },
   "dependencies": {
     "bootstrap-vue": "^2.0.0-rc.11",
+    "payment": "^2.3.0",
     "qr-image": "^3.2.0",
     "qrcanvas-vue": "^1.2.1",
     "qrcode": "^1.3.2",
     "vue": "^2.5.16",
     "vue-bulma-accordion": "^0.3.5",
+    "vue-cleave": "^1.2.2",
     "vue-electron": "^1.0.6",
     "vue-router": "^3.0.1",
+    "vuejs-credit-card": "0.0.2",
+    "vuetify": "^1.3.9",
     "vuex-electron": "^1.0.0"
   },
   "devDependencies": {
@@ -91,7 +95,7 @@
     "vue-html-loader": "^1.2.4",
     "vue-loader": "^15.2.4",
     "vue-style-loader": "^4.1.0",
-    "vue-template-compiler": "^2.5.16",
+    "vue-template-compiler": "^2.5.17",
     "vue2-collapse": "^1.0.15",
     "webpack": "^4.15.1",
     "webpack-cli": "^3.0.8",
