--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "vue-integer-plusminus": "^1.1.0",
     "vue-js-toggle-button": "^1.3.0",
     "vue-router": "^3.0.1",
+    "vue-toasted": "^1.1.25",
     "vuex-electron": "^1.0.0"
   },
   "devDependencies": {
